--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
